pom.xml edits, added .gitignore